Anonymous | Login | 2021-01-23 11:28 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0029503 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2018-02-14 00:01 | 2018-06-29 21:21 | ||||
Reporter | kgv | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | trivial | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.2.0 | ||||||||
Target Version | [OCCT] 7.3.0 | Fixed in Version | [OCCT] 7.3.0 | ||||||
Summary | 0029503: Visualization, TKOpenGl - fix access violation due to misprint in OpenGl_AspectMarker | ||||||||
Description | OpenGl_AspectMarker::Resources::BuildSprites() has misprint introduced by 0028912:const TCollection_AsciiString anOldKey = mySprite->First()->ResourceId(); mySpriteA.Nullify(); // we need nullify all handles before ReleaseResource() call theCtx->ReleaseResource (anOldKey, Standard_True); This causes access violation in specific scenario (marker style switched from PLUS to POINT). | ||||||||
Steps To Reproduce | N/A | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | |||||||||
![]() |
|||||||
|
![]() |
|
(0073970) git (administrator) 2018-02-14 00:09 |
Branch CR29503 has been created by kgv. SHA-1: 57c44737f2cf1b2cb101c3d30d637741e101ecc1 Detailed log of new commits: Author: kgv Date: Wed Feb 14 00:07:48 2018 +0300 0029503: Visualization, TKOpenGl - fix access violation due to misprint in OpenGl_AspectMarker Misprint mySprite->mySpriteA has been corrected. |
(0073974) kgv (developer) 2018-02-14 09:56 edited on: 2018-02-14 09:56 |
Please take the patch (test case is not needed). http://jenkins-test-10.nnov.opencascade.com:8080//view/CR29503-master-KGV [^] |
(0073987) apn (administrator) 2018-02-14 16:12 |
Combination - OCCT branch : CR29503 SHA - 57c44737f2cf1b2cb101c3d30d637741e101ecc1 Products branch : master SHA - 41720ba4c544483d56753d7b5ec17b6a72bfac64 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian70-64: OCCT Total CPU difference: 18296.54999999964 / 18375.13999999976 [-0.43%] Products Total CPU difference: 7504.57000000002 / 7504.889999999995 [-0.00%] Windows-64-VC10: OCCT Total CPU difference: 17671.80888009861 / 17692.572613198507 [-0.12%] Products Total CPU difference: 7999.356877599982 / 8097.855908999923 [-1.22%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0074289) git (administrator) 2018-03-06 15:50 |
Branch CR29503 has been deleted by kgv. SHA-1: 57c44737f2cf1b2cb101c3d30d637741e101ecc1 |
![]() |
|||
occt: master 0793c4f9
Timestamp: 2018-02-13 21:07:48 Author: kgv Committer: apn [ Details ] [ Diff ] |
0029503: Visualization, TKOpenGl - fix access violation due to misprint in OpenGl_AspectMarker Misprint mySprite->mySpriteA has been corrected. |
||
mod - src/OpenGl/OpenGl_AspectMarker.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2018-02-14 00:01 | kgv | New Issue | |
2018-02-14 00:01 | kgv | Assigned To | => kgv |
2018-02-14 00:01 | kgv | Relationship added | related to 0028912 |
2018-02-14 00:02 | kgv | Relationship replaced | child of 0028912 |
2018-02-14 00:04 | kgv | Relationship added | related to 0029306 |
2018-02-14 00:06 | kgv | Summary | Visualization, TKOpenGl - fix access violation due to misprint => Visualization, TKOpenGl - fix access violation due to misprint in OpenGl_AspectMarker |
2018-02-14 00:09 | git | Note Added: 0073970 | |
2018-02-14 09:56 | kgv | Note Added: 0073974 | |
2018-02-14 09:56 | kgv | Severity | minor => trivial |
2018-02-14 09:56 | kgv | Status | new => resolved |
2018-02-14 09:56 | kgv | Status | resolved => reviewed |
2018-02-14 09:56 | kgv | Note Edited: 0073974 | View Revisions |
2018-02-14 16:12 | apn | Test case number | => Not needed |
2018-02-14 16:12 | apn | Note Added: 0073987 | |
2018-02-14 16:12 | apn | Assigned To | kgv => bugmaster |
2018-02-14 16:12 | apn | Status | reviewed => tested |
2018-02-18 13:00 | apn | Changeset attached | => occt master 0793c4f9 |
2018-02-18 13:00 | apn | Assigned To | bugmaster => apn |
2018-02-18 13:00 | apn | Status | tested => verified |
2018-02-18 13:00 | apn | Resolution | open => fixed |
2018-03-06 15:50 | git | Note Added: 0074289 | |
2018-06-29 21:16 | aiv | Fixed in Version | => 7.3.0 |
2018-06-29 21:21 | aiv | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |