0029503: Visualization, TKOpenGl - fix access violation due to misprint in OpenGl_AspectMarker

Misprint mySprite->mySpriteA has been corrected.